--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,7 @@ h1 {
     margin-top: 6rem;
 }
 
-h3 {
+h3, h4 {
 	  font: 900 1em 'Quicksand', sans-serif;
     text-align: center;
     text-transform: none;
